# plsom-monorepo

./: PHASE_A_PLAN.md  PHASE_B_PLAN.md  PHASE_C_PLAN.md  package-lock.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  makefile  manage.py  manage.sh  nixpacks-qcluster.toml  nixpacks.toml  pyproject.toml  requirements.txt
backend/apps/applications/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/assessments/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  test_serializers.py  test_views.py  tests.py  urls.py  views.py
backend/apps/authentication/: serializers.py  tasks.py  test_serializers.py  test_tasks.py  test_views.py  tests.py  urls.py  views.py
backend/apps/classes/: admin.py  models.py  serializers.py  test_models.py  test_serializers.py  test_views.py  urls.py  views.py
backend/apps/cohorts/: admin.py  apps.py  models.py  serializers.py  test_models.py  test_serializers.py  test_views.py  tests.py  urls.py  views.py
backend/apps/communications/: admin.py  services.py
backend/apps/core/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
backend/apps/courses/: admin.py  models.py  urls.py  (+4 more)
backend/config/: celery.py  middleware.py  urls.py  wsgi.py
backend/docs/: ASSESSMENTS_API_DOCUMENTATION.md  ASSESSMENTS_NOTIFICATIONS_DOCUMENTATION.md  TEMPLATE_IMPLEMENTATION_SUMMARY.md  TEMPLATE_SYSTEM_DOCUMENTATION.md
backend/utils/: admin.py  authentication.py  common.py  permissions.py  refine.py  serializers.py
(+392 files in other folders)
